# doc-forge

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: pyproject.toml
backend/src/docforge/: __init__.py  config.py  observability.py
backend/src/docforge/api/: deps.py  errors.py  main.py
backend/src/docforge/api/routers/: document_sets.py  health.py  pages.py  uploads.py
backend/src/docforge/domain/: errors.py  models.py
backend/src/docforge/repositories/: interfaces.py  memory.py
backend/src/docforge/services/: access_service.py  ingestion_service.py  page_serving_service.py  retention_service.py
backend/src/docforge/workers/: dispatcher.py  processing.py
backend/tests/: conftest.py
backend/tests/contract/: test_page_endpoint.py  test_upload_endpoints.py
backend/tests/integration/: test_page_retrieval.py  test_retention.py  test_upload_resume.py
backend/tests/perf/: test_page_latency.py
backend/tests/unit/: test_access_service.py  test_auth_guard.py  test_domain_models.py  test_ingestion_service.py  test_observability.py  test_page_serving_service.py  test_processing_pipeline.py  test_retention_service.py
specs/001-doc-storage-serving/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-doc-storage-serving/checklists/: requirements.md
(+2 files in other folders)
